// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with a single author 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityLabel="articleByline"
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 17,
        },
        undefined,
        Object {
          "color": "#696969",
        },
      ]
    }
    testID="articleByline"
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      href="/profile/alexandra-frean"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          Object {
            "color": "#069",
          },
          undefined,
        ]
      }
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`renders correctly with a single inline element 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityLabel="articleByline"
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 17,
        },
        undefined,
        Object {
          "color": "#696969",
        },
      ]
    }
    testID="articleByline"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Lindsay McIntosh Scottish Political Editor
    </Text>
  </Text>
</View>
`;

exports[`renders correctly with an empty AST (empty byline on DB) 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityLabel="articleByline"
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 17,
        },
        undefined,
        Object {
          "color": "#696969",
        },
      ]
    }
    testID="articleByline"
  />
</View>
`;

exports[`renders correctly with multiple authors separated by spaces 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityLabel="articleByline"
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 17,
        },
        undefined,
        Object {
          "color": "#696969",
        },
      ]
    }
    testID="articleByline"
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      href="/profile/camilla-long"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          Object {
            "color": "#069",
          },
          undefined,
        ]
      }
    >
      Camilla Long
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
       
    </Text>
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      href="/profile/mike-atherton"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          Object {
            "color": "#069",
          },
          undefined,
        ]
      }
    >
      Mike Atherton
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
       
    </Text>
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      href="/profile/alexandra-frean"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          Object {
            "color": "#069",
          },
          undefined,
        ]
      }
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`renders correctly with multiple authors separated by text with commas 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityLabel="articleByline"
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 17,
        },
        undefined,
        Object {
          "color": "#696969",
        },
      ]
    }
    testID="articleByline"
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      href="/profile/camilla-long"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          Object {
            "color": "#069",
          },
          undefined,
        ]
      }
    >
      Camilla Long
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      , 
    </Text>
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      href="/profile/mike-atherton"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          Object {
            "color": "#069",
          },
          undefined,
        ]
      }
    >
      Mike Atherton
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      , 
    </Text>
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      href="/profile/alexandra-frean"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          Object {
            "color": "#069",
          },
          undefined,
        ]
      }
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`renders correctly with styles 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityLabel="articleByline"
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 17,
        },
        Object {
          "color": "blue",
        },
        Object {
          "color": "#696969",
        },
      ]
    }
    testID="articleByline"
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      href="/profile/alexandra-frean"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          Object {
            "color": "#069",
          },
          Object {
            "color": "red",
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`renders correctly with the author at the end 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityLabel="articleByline"
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 17,
        },
        undefined,
        Object {
          "color": "#696969",
        },
      ]
    }
    testID="articleByline"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      RBS Six Nations 
    </Text>
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      href="/profile/mike-atherton"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          Object {
            "color": "#069",
          },
          undefined,
        ]
      }
    >
      Mike Atherton
    </Text>
  </Text>
</View>
`;

exports[`renders correctly with the author in the begining 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityLabel="articleByline"
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 17,
        },
        undefined,
        Object {
          "color": "#696969",
        },
      ]
    }
    testID="articleByline"
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      href="/profile/camilla-long"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          Object {
            "color": "#069",
          },
          undefined,
        ]
      }
    >
      Camilla Long
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;
